# budget-api

./: .gitignore  Cargo.toml
migrations/: 20250728135355_init.up.sql
src/: lib.rs  main.rs
src/domain/: errors.rs  mod.rs  models.rs
src/repository/: accounts.rs  categories.rs  dto.rs  errors.rs  migrations.rs  mod.rs  records.rs  test.rs
src/repository/fixtures/: fixture.sql
src/service/: accounts.rs  budget.rs  categories.rs  mod.rs  records.rs
src/transport/: accounts.rs  categories.rs  errors.rs  mod.rs  records.rs  router.rs
